# mininotion

./: .gitignore  Cargo.toml  README.md
src/: app.rs  config.rs  editor.rs  main.rs  syntax.rs  theme.rs  ui.rs
