[package]
name = "notion_plus_plus"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modern, cross-platform text editor written in Rust"

[dependencies]
eframe = "0.26.2"     # egui framework
egui_extras = "0.26.2" # additional egui widgets
egui-file-dialog = "0.9.0" # file dialog for egui
syntect = "5.2.0"     # syntax highlighting
rfd = "0.13.0"        # native file dialogs
directories = "5.0.1" # finding config directory
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11.1"

[build-dependencies]
embed-resource = "2.4"

[profile.release]
opt-level = 2
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort" 